# bblang

./: .gitignore  README.md  bblang.desc
example/: CMakeLists.txt  calc.desc  calculator.hpp  main.cpp  test.calc
example/include/ast/: ast_node.hpp  ast_visitor.hpp  expression_side_node.hpp  factor_node.hpp  program_node.hpp  term_node.hpp
example/src/ast/: expression_side_node.cpp  factor_node.cpp  program_node.cpp  term_node.cpp
example/src/parser/: CMakeLists.txt  calc.l  calc.y  calc_lexer.cpp  calc_parser.cpp  calc_parser.hpp
include/ast/: arithmetic_constant_node.hpp  arithmetic_expr_lvl1_node.hpp  arithmetic_expr_lvl2_node.hpp  arithmetic_expr_lvl3_node.hpp  arithmetic_expr_lvl4_node.hpp  arithmetic_expr_lvl5_node.hpp  arithmetic_expression_node.hpp  arithmetic_expressions_comparison_node.hpp  arithmetic_term_node.hpp  ast_kind.hpp  ast_visitor.hpp  identifier_node.hpp  integer_node.hpp  l_value_node.hpp  logic_constant_node.hpp  logic_expr_lvl1_node.hpp  logic_expr_lvl2_node.hpp  logic_expression_node.hpp  logic_term_node.hpp  program_node.hpp  r_value_node.hpp  real_node.hpp
include/code-gen/: code_gen.hpp  context.hpp
include/semantic-check/: semantic_check.hpp
preflex/: README.md  ast_node.cpp  ast_node.hpp  bison_writer.py  class_writer.py  cmake_writer.py  flex_writer.py  generator.py  naming.py  preflex.py  reader.py
src/: CMakeLists.txt  main.cpp
src/ast/: arithmetic_constant_node.cpp  arithmetic_expr_lvl1_node.cpp  arithmetic_expr_lvl2_node.cpp  arithmetic_expr_lvl3_node.cpp  arithmetic_expr_lvl4_node.cpp  arithmetic_expr_lvl5_node.cpp  arithmetic_expression_node.cpp  arithmetic_expressions_comparison_node.cpp  arithmetic_term_node.cpp  l_value_node.cpp  logic_constant_node.cpp  logic_expr_lvl1_node.cpp  logic_expr_lvl2_node.cpp  logic_expression_node.cpp  logic_term_node.cpp  program_node.cpp  r_value_node.cpp
src/code-gen/: code_gen.cpp  context.cpp
src/parser/: CMakeLists.txt  bblang.l  bblang.y  bblang_lexer.cpp  bblang_parser.cpp  bblang_parser.hpp
src/semantic-check/: semantic_check.cpp
